# SmartContract-VulnHunter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  OPENCODE_INTEGRATION.md  README.md  SECURITY.md  USAGE.md  WALKTHROUGH.md  pyproject.toml  recon-playbook.md  vulnhunter.toml
benchmarks/: compare_baseline.py  ctfbench_runner.py  external_submissions.py  thresholds.json
docs/ci/: guardrails.md  runbook.md
examples/: adapters_usage.py  reporter_demo.py
src/vulnhunter/: __main__.py  findings.py  main.py  plugin_system.py
src/vulnhunter/adapters/: README.md  __init__.py  aderyn_adapter.py  base.py  caracal_adapter.py  cargo_audit_adapter.py  certora_adapter.py  echidna_adapter.py  foundry_adapter.py  fournaly3er_adapter.py  halmos_adapter.py  heimdall_adapter.py  ityfuzz_adapter.py  medusa_adapter.py  mock_scanner_adapter.py  mythril_adapter.py  sec3_xray_adapter.py  semgrep_adapter.py  slither_adapter.py  smtchecker_adapter.py  solhint_adapter.py  trident_adapter.py  vyper_adapter.py
src/vulnhunter/commands/: __init__.py  analyze.py  audit.py  benchmark.py  bounty.py  clone.py  config.py  contest.py  hunt.py  kb.py  monitor.py  poc.py  recon.py  report.py  scan.py  status.py  tools.py
src/vulnhunter/config/: __init__.py  settings.py
src/vulnhunter/contest/: __init__.py  adapter.py  pipeline.py
src/vulnhunter/core/: __init__.py  deduplicator.py  orchestrator.py  repo_cloner.py  results_store.py  sarif_merger.py  task.py  temporal_dedup.py
src/vulnhunter/integrations/: dedaub.py  tenderly.py
src/vulnhunter/knowledge/: __init__.py  attack_vectors.py
src/vulnhunter/llm/: __init__.py  adversarial.py  client.py  consensus.py  graph.py  orchestrator_brain.py  paranoid.py  pipeline.py  prompts.py  router.py  scanner_context.py  telemetry.py
src/vulnhunter/models/: __init__.py  finding.py  fingerprint.py  sarif.py  severity_matrix.py
src/vulnhunter/monitor/: __init__.py  (+1 more)
stress_test_contracts/: VulnerableDAO.sol  VulnerableFlashLoan.sol  VulnerableToken.sol
test_contracts/: VulnerableBank.sol
tests/: test_cargo_audit_adapter.py  test_end_to_end.py  test_heimdall_adapter.py  test_trident_adapter.py
tests/integration/: test_scan_enrichment.py
vulnhunter-knowledge-base/: SKILL.md
vulnhunter-knowledge-base/references/: cairo-vulns.md  rust-vulns.md  solidity-vulns.md  vyper-vulns.md
(+42 files in other folders)
