[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnhunter"
version = "0.3.0"
description = "Ultimate smart contract security CLI framework for bug bounty researchers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SmartContract VulnHunter Team"}
]
keywords = ["security", "smart-contracts", "blockchain", "bug-bounty", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer[all]>=0.14.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomli>=2.0.0",
    "httpx>=0.25.0",
    "pluggy>=1.4.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "jinja2>=3.1.0",
    "GitPython>=3.1.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "chromadb>=0.5.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-solidity>=1.2.0",
    "tree-sitter-rust>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
vulnhunter = "vulnhunter.main:app"

[project.urls]
Homepage = "https://github.com/vulnhunter/vulnhunter"
Repository = "https://github.com/vulnhunter/vulnhunter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
